Layout Issues Adjustments + Video Addition
This commit is to adjust some alignment issues and add a new video for donor page.

--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -1,5 +1,17 @@
 @use "../abstracts/variables" as v;
 
+#hero-contact {
+    padding: 120px 24px;
+    margin-top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    background-image: url(../images/map-texture.svg);
+    background-size: cover;
+}
+
 #sponsorship {
     background-color: v.$green;
     
@@ -70,6 +82,11 @@
 
 // Tablet Size
 @media screen and (min-width: 768px) {    
+    #hero-contact {
+        padding: 150px 24px;
+        margin-top: 120px;
+    }
+
     #contact-detail {
         display: flex;
         flex-direction: row;
@@ -118,6 +135,11 @@
 }
 
 @media screen and (min-width: 1200px) {
+    #hero-contact {
+        padding: 200px 24px;
+        margin-top: 100px;
+    }
+
     #map {
         margin: 48px auto;
         iframe {
