--- a/sass/pages/_letters.scss
+++ b/sass/pages/_letters.scss
@@ -5,7 +5,7 @@
     padding: 120px 24px;
     margin-top: 0;
     background-image: url(../images/4_halftone.png);
-    background-position: center;
+    background-position: top;
     background-size: cover;
 
     h2 {
